# teaching

./: .gitignore  README.md  flake.nix  patch_ray.sh  pyproject.toml
tutorials/: Flower-1-Intro-to-FL-PyTorch.ipynb  fl_for_ids_101.ipynb  fl_for_ids_101_cyberschool.ipynb
