[tool.poetry]
name = "teaching"
version = "0.1.0"
description = "Packages for python tutorials"
authors = ["Léo Lavaur <contact@leolavaur.re>"]
readme = "README.md"
#packages = [{include = "trustfids"}]

[tool.poetry.dependencies]
python = "~3.10.7"
tensorflow = "~2.11.0"
flwr = { version = "^1.1.0", extras = ["simulation"] }
matplotlib = "^3.6.1"
numpy = "^1.23.5"
pandas = "1.4.3"
scikit-learn = "~1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
isort = "^5.11.4"
logging-tree = "^1.9"
ipykernel = "^6.21.3"
ipython = "^8.11.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"